# simple-network

./: README.md
grpc/: .env.example  Cargo.toml  Dockerfile-client  Dockerfile-server  build.rs  docker-compose.yml
grpc/protos/: books.proto
grpc/src/: client.rs  server.rs
quic/: Cargo.toml  Makefile  host.cert.sample  host.key.sample  host.pem.sample
quic/src/: client.rs  s2n_client.rs  s2n_server.rs  server.rs  single_socket.rs  test.rs
quic/src/common/: mod.rs
udp/: Cargo.toml
udp/src/: client.rs  server.rs
