[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#server bin
[[bin]]
   name="server"
   path="./src/server.rs"

#client bin
[[bin]]
    name="client"
    path="./src/client.rs"
[dependencies]
tokio={version = "1.30.0",features = ["full"]}
tonic="0.9.2"
prost="0.11.9"

[build-dependencies]
tonic-build = "0.9.2"

