[package]
name = "quic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#single socket
[[bin]]
  name="single_socket"
  path="./src/single_socket.rs"

#server
[[bin]]
  name="server"
  path="./src/server.rs"

#client
[[bin]]
  name="client"
  path="./src/client.rs"


[dependencies]
anyhow = "1.0.74"
tracing = "0.1.37"
rustls-pemfile = "1.0.0"
directories-next = "2"
rustls="0.21.6"
#rustls = { version = "0.21.0", default-features = false, features = ["quic"], optional = true }
rcgen = "0.11.1"
#rustls = { version = "0.21.6", default-features = false, features = ["quic"], optional = true }
clap = { version = "4.3.21", features = ["derive"] }
tokio = { version = "1.31.0", features =["full"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt", "ansi", "time", "local-time"] }
tracing-futures = { version = "0.2.5", default-features = false, features = ["std-future"] }
quinn = "0.10.2"
url = "2"
